2005-03-30  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (log10, tan, tanh): Delete functions.
	* lo-mappers.h (log10, tan, tanh): Delete decls.

	* CColVector.cc, CNDArray.cc, CRowVector.cc, CSparse.cc,
	dSparse.cc: Use std:: for Complex functions instead of relying on
	wrappers from oct-cmplx.h.

	* oct-cmplx.h: Provide typedef only.

	* DiagArray2.cc (xelem): Don't use initializer for static data.
	* DiagArray2.h (DiagArray<T>::Proxy::operator T ()):
	Likewise.

2005-03-26  John W. Eaton  <jwe@octave.org>

	* cmd-edit.cc (do_readline): Wrap call to ::octave_rl_readline
	with {BEGIN,END}_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE.

2005-03-15  John W. Eaton  <jwe@octave.org>

	* Makefile.in (MATRIX_INC): Remove oct-spparms.h from the list.

2005-03-14  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DISTFILES): Don't include $(UMFPACK_EXTRAS).
	(DISTDIRS): Don't include UMFPACK.
	(LIBOCTAVE_OBJECTS): Don't include $(UMFPACK_OBJ).
	(UMFPACK_SPECIAL_1, UMFPACK_SPECIAL): No need for special include
	flags for these files.
	Don't include include $(srcdir)/UMFPACK.files.
	Don't include include $(srcdir)/UMFPACK.rules.

	* UMFPACK.README, UMFPACK.files, UMFPACK.patch, UMFPACK.rules:
	Delete files.
	* UMFPACK: Delete directory tree.

	* dSparse.cc: Include <umfpack/umfpack.h> instead of just "umfpack.h".
	* CSparse.cc: Likewise.
	* SparsedbleLU.cc: Likewise.
	* SparseCmplxLU.cc: Likewise.

2005-03-14  David Bateman  <dbateman@free.org>

	* CSParse.cc, SparseCmplxLU.cc, SparsedbleLU.cc, dSparse.cc:
	Allow compilation to succeed if UMFPACK is not available.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* Makefile.in (bin-dist): Delete target.
	(BINDISTLIBS, BINDISTFILES): Delete variables.

2005-03-01  John W. Eaton  <jwe@octave.org>

	* ODESSA.h, ODESSA.cc, ODESSA-opts.in: Delete.
	* Makefile.in: Remove them from the lists.

2005-02-28  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LINK_DEPS): Remove -lglob from the list.
